# dsforum_tester_verktoey

./: README.md  justfile  pyproject.toml
src/dataseksjonen_ansatt/: __init__.py
tests/: test_noe.py
